<resources>
    <string name="app_name">ZenTrader</string>
    <string name="addInstrument">Add Instrument</string>
    <string name="instrumentSettings">Instrument Settings</string>
    <string name="action_settings">Settings</string>
    <string name="goBack"><![CDATA[<Back]]></string>
    <string name="charttitle">CHART</string>
    <string name="layout_title">POSITIONS</string>
    <string name="change_title">CHANGE</string>
    <string name="addInstrumentHeader">ADD INSTRUMENTS</string>
    <string name="confirmInstrumentAdd">Confirm</string>
    <string name="cancelInstrumentAdd">Cancel</string>
    <string name="add_instrument_header_text">Add Instrument</string>
    <string name="register_screen_title_label">Register</string>
    <string name="register_screen_forename_label">First Name</string>
    <string name="register_screen_register_button_label">Save</string>
    <string name="register_screen_lastname_label">Last Name</string>
    <string name="register_screen_email_label">Email</string>
    <string name="register_screen_password_label">Choose a password</string>
    <string name="register_screen_register_switch_label">Stay logged in</string>
    <string name="register_screen_login_label">Login</string>
</resources>
