<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_addInstrument"
        android:icon="@drawable/ic_note_add_white_36dp"
        android:title="@string/addInstrument"

        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_instrumentSettings"
        android:icon="@drawable/ic_settings_white_36dp"
        android:title="@string/instrumentSettings"
        app:showAsAction="ifRoom"
        />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>