<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.zentrader.register.RegisterAccountActivity"
    >

    <TextView
        android:id="@+id/register_screen_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      
        android:text="@string/register_screen_title_label"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/register_screen_email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_screen_email_label"
        />

    <EditText
        android:id="@+id/register_screen_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
      />

    <TextView
        android:id="@+id/register_screen_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_screen_password_label"
        />

    <EditText
        android:id="@+id/register_screen_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="textPassword"
        />

    <Switch
        android:id="@+id/register_screen_savePasswordSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_screen_register_switch_label"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/register_screen_login_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_screen_login_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12dp"
        android:textAlignment="center"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/register_screen_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="RegisterUser"
        android:text="@string/register_screen_register_button_label" />




</LinearLayout>
